fix collapse arrow button height

--- a/src/styles/part/content.module.css
+++ b/src/styles/part/content.module.css
@@ -21,7 +21,7 @@
     position: absolute;
     top: 0;
     z-index: 10;
-    height: 20px;
+    height: 100%;
     width: 20px;
     display: grid;
     place-content: center;
